[project]
name = "pipeline"
version = "0.1.0"
description = "Um simulador e gerador de diagramas SVG para execução de instruções MIPS em um pipeline clássico de 5 estágios (IF, ID, EX, MEM, WB)."
authors = [
    { name = "Arthur Valadares Campideli", email = "arthur.c.valadares@gmail.com" }
]

readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE"
]

requires-python = ">=3.12,<4.0"
dependencies = [
    "click (>=8.3.3,<9.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "lark (>=1.3.1,<2.0.0)",
    "lark-parser (>=0.12.0,<0.13.0)"
]

[tool.poetry]
packages = [{ include = "pipeline", from = "src" }]
include = ["src/pipeline/grammar.lark"]

[project.urls]
repository = "https://github.com/ArthurValadares/mips-pipeline-visualizer"

[project.scripts]
pipeline = 'pipeline.main:main'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
